# zyn

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  renovate.json5
.github/workflows/: ci.yaml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: c2s.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  conn.rs  lib.rs  service.rs
crates/modulator/: Cargo.toml
crates/modulator/src/: client.rs  config.rs  conn.rs  lib.rs  listener.rs  modulator.rs
crates/modulator/tests/: m2s_tests.rs  s2m_tests.rs
crates/protocol/: Cargo.toml
crates/protocol-macros/: Cargo.toml
crates/protocol-macros/src/: lib.rs
crates/protocol/src/: acl.rs  deserialize.rs  error.rs  event.rs  id.rs  lib.rs  message.rs  qos.rs  serialize.rs  stream.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs
crates/server/src/c2s/: client.rs  config.rs  conn.rs  listener.rs  mod.rs  router.rs
crates/server/src/channel/: mod.rs
crates/server/src/notifier/: mod.rs
crates/server/src/router/: mod.rs
crates/server/src/telemetry/: metrics.rs  mod.rs
crates/server/src/transmitter/: mod.rs
crates/server/src/util/: mod.rs  tls.rs
crates/server/src/version/: mod.rs
crates/server/tests/: c2s_modulator_tests.rs  c2s_tests.rs
crates/test-util/: Cargo.toml
crates/test-util/src/: c2s_suite.rs  lib.rs  m2s_suite.rs  modulator.rs  s2m_suite.rs  tls.rs
crates/util/: Cargo.toml
crates/util/src/: backoff.rs  codec.rs  conn.rs  io.rs  lib.rs  pool.rs  slab.rs  string_atom.rs
docs/: PROTOCOL.md
examples/config/: c2s-benchmark.toml  c2s-minimal-with-s2m-unix.toml  s2m-minimal-unix.toml
examples/modulator/: Cargo.toml
examples/modulator/broadcast-payload-csv-validator/: Cargo.toml
examples/modulator/broadcast-payload-csv-validator/src/: main.rs
examples/modulator/broadcast-payload-json-validator/: Cargo.toml
examples/modulator/broadcast-payload-json-validator/src/: main.rs
examples/modulator/plain-authenticator/: Cargo.toml
examples/modulator/plain-authenticator/src/: main.rs
examples/modulator/private-payload-sender/: Cargo.toml
examples/modulator/private-payload-sender/src/: main.rs
zyn-common/: Cargo.toml
zyn-common/src/: client.rs  conn.rs  lib.rs
zyn-modulator/: Cargo.toml
zyn-modulator/src/: conn.rs  lib.rs
zyn-modulator/tests/: m2s_tests.rs
zyn-protocol/: Cargo.toml
zyn-protocol/src/: deserialize.rs  error.rs  id.rs
zyn-server/: Cargo.toml
zyn-server/src/c2s/: config.rs  conn.rs
zyn-server/src/notifier/: mod.rs
zyn-server/src/router/: mod.rs
zyn-server/src/transmitter/: mod.rs
zyn-server/src/util/: mod.rs  tls.rs
zyn-test-util/: Cargo.toml
zyn-test-util/src/: c2s_suite.rs  modulator.rs  tls.rs
zyn-util/src/: conn.rs  lib.rs  pool.rs  slab.rs  string_atom.rs
