[workspace]
resolver = "2"

members = [
    "crates/benchmark",
    "crates/client",
    "crates/common",
    "crates/modulator",
    "crates/protocol",
    "crates/protocol-macros",
    "crates/server",
    "crates/test-util",
    "crates/util",
]

[profile.dev]
debug = true

[profile.release]
debug = true
