[package]
name = "zyn-modulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
deadpool =  {  version = "0.12.2", features = ["rt_tokio_1"] }
humantime-serde = "1.1"
parking_lot = "0.12.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["io-util", "signal"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
zyn-common = { path = "../zyn-common" }
zyn-protocol = { path = "../zyn-protocol" }
zyn-util = { path = "../zyn-util" }

[dev-dependencies]
zyn-test-util = { path = "../zyn-test-util" }
