[package]
name = "zyn-test-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-rustls = "0.26.4"
zyn-common = { path = "../zyn-common" }
zyn-modulator = { path = "../zyn-modulator" }
zyn-protocol = { path = "../zyn-protocol" }
zyn-server = { path = "../zyn-server" }
zyn-util = { path = "../zyn-util" }
rustls = "0.23.32"
webpki-roots = "1.0.3"
pki-types = { package = "rustls-pki-types", version = "1" }
