[package]
name = "zyn-benchmark"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "zyn-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros", "io-util"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.16"
rustls = "0.23.32"
pki-types = { package = "rustls-pki-types", version = "1" }
webpki-roots = "1.0.3"
hdrhistogram = "7.5"
indicatif = "0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
rand = "0.9"
futures = "0.3"

# Internal dependencies
zyn-client = { path = "../client" }
zyn-protocol = { path = "../protocol" }
zyn-util = { path = "../util" }
