[package]
name = "zyn-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
tokio = { version = "1.48.0", features = ["io-util", "net"] }
tokio-rustls = "0.26.4"
tracing = "0.1.41"
zyn-common = { path = "../common" }
zyn-protocol = { path = "../protocol" }
zyn-util = { path = "../util" }

[dev-dependencies]
zyn-test-util = { path = "../test-util" }
