[package]
name = "narwhal-client"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
humantime-serde = "1.1"
tokio = { version = "1.48.0", features = ["io-util", "net"] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
narwhal-common = { path = "../common" }
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
futures = "0.3.31"

[dev-dependencies]
narwhal-test-util = { path = "../test-util" }
