[package]
name = "narwhal-common"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
deadpool =  {  version = "0.12.3", features = ["rt_tokio_1"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.15", features = ["rt", "codec"] }
tracing = "0.1.41"
parking_lot = "0.12.5"
rand = "0.9.1"
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
