[package]
name = "zyn-modulator"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
deadpool =  {  version = "0.12.2", features = ["rt_tokio_1"] }
humantime-serde = "1.1"
parking_lot = "0.12.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["io-util", "signal"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
zyn-common = { path = "../common" }
zyn-protocol = { path = "../protocol" }
zyn-util = { path = "../util" }

[dev-dependencies]
zyn-test-util = { path = "../test-util" }
