[package]
name = "entangle-protocol"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
once_cell = "1.21.3"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["io-util"] }
entangle-protocol-macros = { path = "../protocol-macros" }
entangle-util = { path = "../util" }
