[package]
name = "zyn-test-util"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-rustls = "0.26.4"
zyn-common = { path = "../common" }
zyn-modulator = { path = "../modulator" }
zyn-protocol = { path = "../protocol" }
zyn-server = { path = "../server" }
zyn-util = { path = "../util" }
rustls = "0.23.32"
webpki-roots = "1.0.3"
pki-types = { package = "rustls-pki-types", version = "1" }
