[package]
name = "entangle-test-util"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-rustls = "0.26.4"
entangle-common = { path = "../common" }
entangle-modulator = { path = "../modulator" }
entangle-protocol = { path = "../protocol" }
entangle-server = { path = "../server" }
entangle-util = { path = "../util" }
rustls = "0.23.32"
webpki-roots = "1.0.3"
pki-types = { package = "rustls-pki-types", version = "1" }
