[package]
name = "zyn-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
figment = { version = "0.10", features = ["yaml", "env"] }
humantime = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
string_cache = "0.9.0"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "net", "sync", "time"] }
rand = "0.9.1"
