[package]
name = "zyn-util"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
bytes = "1.10.1"
tokio-rustls = "0.26.4"
humantime = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
smallvec = "1.15.1"
string_cache = "0.9.0"
rand = "0.9.1"
rustls = "0.23.32"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "net", "sync", "time"] }
webpki-roots = "1.0.0"
