[package]
name = "broadcast-payload-csv-validator"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
entangle-modulator = { path = "../../../crates/modulator" }
entangle-protocol = { path = "../../../crates/protocol" }
entangle-util = { path = "../../../crates/util" }
