[package]
name = "broadcast-payload-json-validator"
description = "A JSON payload validator for Entangle protocol"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.140"
toml = "0.9.8"
entangle-modulator = { path = "../../../crates/modulator" }
entangle-protocol = { path = "../../../crates/protocol" }
entangle-util = { path = "../../../crates/util" }
