[package]
name = "plain-authenticator"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
entangle-modulator = { path = "../../../crates/modulator" }
entangle-protocol = { path = "../../../crates/protocol" }
entangle-util = { path = "../../../crates/util" }
