[package]
name = "private-payload-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
toml = "0.9.8"
tracing = "0.1.41"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
zyn-modulator = { path = "../../../crates/modulator" }
zyn-protocol = { path = "../../../crates/protocol" }
zyn-util = { path = "../../../crates/util" }
